--- a/src/pages/signup.astro
+++ b/src/pages/signup.astro
@@ -84,8 +84,8 @@
       <input type="date" id="date_embauche" name="date_embauche" required>
     </div>
     <div class="form-group">
-      <label for="login">Login</label>
-      <input type="text" id="login" name="login" required maxlength="30">
+      <label for="identifiant">Identifiant</label>
+      <input type="text" id="identifiant" name="identifiant" required maxlength="30">
     </div>
     <div class="form-group">
       <label for="mot_de_passe">Mot de passe</label>
@@ -117,7 +117,7 @@
       permis_bateau: document.getElementById('permis_bateau').checked,
       specialite: document.getElementById('specialite').value,
       tarif_horaire: parseFloat(document.getElementById('tarif_horaire').value),
-      login: document.getElementById('login').value,
+      identifiant: document.getElementById('identifiant').value,
       mot_de_passe: document.getElementById('mot_de_passe').value,
       date_embauche: document.getElementById('date_embauche').value,
       niveau_experimente: false, // TODO
