feat: extracting generic CRUD API logic

--- a/src/components/CRUDView.astro
+++ b/src/components/CRUDView.astro
@@ -1,5 +1,5 @@
 ---
-import type { CRUDProps } from '../types';
+import type { CRUDProps } from '../types/crud-interface';
 
 interface Props extends CRUDProps {}
 
