refactor: extracting base layout and CRUDView styles

--- a/src/pages/clients.astro
+++ b/src/pages/clients.astro
@@ -1,5 +1,6 @@
 ---
 import CRUDView from '../components/CRUDView.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const fields = [
   {
@@ -45,12 +46,18 @@ const fields = [
 ];
 
 const columns = ['Nom', 'Prénom', 'Email', 'Téléphone', "Pièce d'identité", 'Camping'];
+
+const title = 'Gestion des Clients';
 ---
 
-<CRUDView
-    apiUrl="/api/clients"
-    fields={fields}
-    title="Gestion des Clients"
-    idField="id_client"
-    columns={columns}
-/>
+<BaseLayout
+    title={title}
+>
+  <CRUDView
+      apiUrl="/api/clients"
+      fields={fields}
+      title={title}
+      idField="id_client"
+      columns={columns}
+  />
+</BaseLayout>
