--- a/src/pages/forfait.astro
+++ b/src/pages/forfait.astro
@@ -1,5 +1,6 @@
 ---
 import CRUDView from '../components/CRUDView.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const fields = [
   {
@@ -114,12 +115,17 @@ const columns = [
   'Montant',
   'Type paiement'
 ];
----
 
+const title = "Gestion des Forfaits";
+---
+<BaseLayout
+    title={title}
+>
 <CRUDView
     apiUrl="/api/forfait"
     fields={fields}
-    title="Gestion des Forfaits"
+    title={title}
     idField="id_forfait"
     columns={columns}
 />
+</BaseLayout>
