--- a/src/pages/materiel.astro
+++ b/src/pages/materiel.astro
@@ -1,5 +1,6 @@
 ---
 import CRUDView from '../components/CRUDView.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const fields = [
   {
@@ -8,12 +9,12 @@ const fields = [
     type: 'select',
     required: true,
     options: [
-      { value: 'Catamaran', label: 'Catamaran' },
-      { value: 'Pedalo', label: 'Pédalo' },
-      { value: 'Paddle', label: 'Paddle' },
-      { value: 'Planche', label: 'Planche' },
-      { value: 'Voile', label: 'Voile' },
-      { value: 'Pied_mat', label: 'Pied de mât' }
+      {value: 'Catamaran', label: 'Catamaran'},
+      {value: 'Pedalo', label: 'Pédalo'},
+      {value: 'Paddle', label: 'Paddle'},
+      {value: 'Planche', label: 'Planche'},
+      {value: 'Voile', label: 'Voile'},
+      {value: 'Pied_mat', label: 'Pied de mât'}
     ]
   },
   {
@@ -28,10 +29,10 @@ const fields = [
     type: 'select',
     required: true,
     options: [
-      { value: 'Recu', label: 'Reçu' },
-      { value: 'EnService', label: 'En service' },
-      { value: 'EnPanne', label: 'En panne' },
-      { value: 'AuRebut', label: 'Au rebut' }
+      {value: 'Recu', label: 'Reçu'},
+      {value: 'EnService', label: 'En service'},
+      {value: 'EnPanne', label: 'En panne'},
+      {value: 'AuRebut', label: 'Au rebut'}
     ]
   },
   {
@@ -63,12 +64,18 @@ const columns = [
   'N° série',
   'Quantité'
 ];
+
+const title = "Gestion du Matériel";
 ---
 
-<CRUDView
-    apiUrl="/api/materiel"
-    fields={fields}
-    title="Gestion du Matériel"
-    idField="id_materiel"
-    columns={columns}
-/>
+<BaseLayout
+    title={title}
+>
+  <CRUDView
+      apiUrl="/api/materiel"
+      fields={fields}
+      title={title}
+      idField="id_materiel"
+      columns={columns}
+  />
+</BaseLayout>
