--- a/src/pages/panne.astro
+++ b/src/pages/panne.astro
@@ -1,5 +1,6 @@
 ---
 import CRUDView from '../components/CRUDView.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const fields = [
   {
@@ -25,7 +26,7 @@ const fields = [
     label: 'Description',
     type: 'textarea'
   },
-{
+  {
     name: 'id_materiel',
     label: 'Matériel',
     type: 'number',
@@ -63,12 +64,18 @@ const columns = [
   'Matériel',
   'Saison'
 ];
+
+const title = "Gestion des Pannes";
 ---
 
-<CRUDView
-    apiUrl="/api/panne"
-    fields={fields}
-    title="Gestion des Pannes"
-    idField="id_panne"
-    columns={columns}
-/>
+<BaseLayout
+    title={title}
+>
+  <CRUDView
+      apiUrl="/api/panne"
+      fields={fields}
+      title={title}
+      idField="id_panne"
+      columns={columns}
+  />
+</BaseLayout>
