--- a/src/pages/cours.astro
+++ b/src/pages/cours.astro
@@ -1,6 +1,10 @@
 ---
 import CRUDView from '../components/CRUDView.astro';
 import BaseLayout from "../layouts/BaseLayout.astro";
+import {checkAuth} from "../services/auth/page-auth";
+
+const user = await checkAuth(Astro);
+if (!user) return Astro.redirect('/login', 302);
 
 const fields = [
   {
