--- a/src/pages/forfait.astro
+++ b/src/pages/forfait.astro
@@ -1,5 +1,10 @@
 ---
 import CRUDView from '../components/CRUDView.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
+import {checkAuth} from "../services/auth/page-auth";
+
+const user = await checkAuth(Astro);
+if (!user) return Astro.redirect('/login', 302);
 
 const fields = [
   {
@@ -114,12 +119,17 @@ const columns = [
   'Montant',
   'Type paiement'
 ];
----
 
+const title = "Gestion des Forfaits";
+---
+<BaseLayout
+    title={title}
+>
 <CRUDView
     apiUrl="/api/forfait"
     fields={fields}
-    title="Gestion des Forfaits"
+    title={title}
     idField="id_forfait"
     columns={columns}
 />
+</BaseLayout>
