--- a/src/pages/location.astro
+++ b/src/pages/location.astro
@@ -1,5 +1,10 @@
 ---
 import CRUDView from '../components/CRUDView.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
+import {checkAuth} from "../services/auth/page-auth";
+
+const user = await checkAuth(Astro);
+if (!user) return Astro.redirect('/login', 302);
 
 const fields = [
   {
@@ -73,12 +78,18 @@ const columns = [
   'Saison',
   'Matériel'
 ];
+
+const title = "Gestion des Locations";
 ---
 
-<CRUDView
-    apiUrl="/api/locations"
-    fields={fields}
-    title="Gestion des Locations"
-    idField="id_location"
-    columns={columns}
-/>
+<BaseLayout
+    title={title}
+>
+  <CRUDView
+      apiUrl="/api/locations"
+      fields={fields}
+      title={title}
+      idField="id_location"
+      columns={columns}
+  />
+</BaseLayout>
