--- a/src/pages/manage/signup.astro
+++ b/src/pages/manage/signup.astro
@@ -1,5 +1,5 @@
 ---
-import {checkAuth} from "../services/auth/page-auth";
+import {checkAuth} from "../../services/auth/page-auth";
 
 const user = await checkAuth(Astro);
 if (!user) return Astro.redirect('/login', 302);
