--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -2,54 +2,11 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import {checkAuth} from "../services/auth/page-auth";
 import '../styles/dashboard.css';
+import {managementPages} from "../data/managementPages";
 
 const user = await checkAuth(Astro);
 if (!user) return Astro.redirect('/login', 302);
 
-const managementPages = [
-  {
-    title: 'Clients',
-    description: 'Gérer les informations des clients',
-    icon: '👥',
-    link: '/manage/clients'
-  },
-  {
-    title: 'Cours',
-    description: 'Gérer les cours proposés',
-    icon: '📚',
-    link: '/manage/cours'
-  },
-  {
-    title: 'Forfaits',
-    description: 'Gérer les forfaits disponibles',
-    icon: '🎫',
-    link: '/manage/forfait'
-  },
-  {
-    title: 'Locations',
-    description: 'Gérer les locations',
-    icon: '🔑',
-    link: '/manage/location'
-  },
-  {
-    title: 'Matériel',
-    description: 'Gérer le matériel disponible',
-    icon: '🛠️',
-    link: '/manage/materiel'
-  },
-  {
-    title: 'Pannes',
-    description: 'Gérer les pannes et maintenance',
-    icon: '⚠️',
-    link: '/manage/panne'
-  },
-  {
-    title: 'Inscriptions',
-    description: 'Gérer les inscriptions',
-    icon: '📝',
-    link: '/manage/signup'
-  }
-];
 ---
 
 <BaseLayout title="Dashboard">
