fix: redirect login/ to dashboard/ is already connected

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,4 +1,8 @@
 ---
+import {checkAuth} from "../services/auth/page-auth";
+
+const user = await checkAuth(Astro);
+if (user) return Astro.redirect('/dashboard', 302);
 ---
 <!DOCTYPE html>
 <html lang="fr">
